--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4DB6AC</color> <color name="colorPrimaryVariant">#004D40</color>
+    <color name="colorPrimary">#4DB6AC</color>
+    <color name="colorPrimaryVariant">#004D40</color>
     <color name="colorOnPrimary">#000000</color>
     <color name="colorSecondary">#FFD54F</color>
     <color name="colorSecondaryVariant">#D4AF37</color>
     <color name="colorOnSecondary">#000000</color>
 
-    <color name="background_main">#121212</color> <color name="bg_cream">#1E1E1E</color>       <color name="bg_white">#2C2C2C</color>       <color name="card_background">#1E1E1E</color>
+    <color name="background_main">#121212</color>
+    <color name="bg_cream">#1E1E1E</color>
+    <color name="bg_white">#2C2C2C</color>
+    <color name="card_background">#1E1E1E</color>
     <color name="background_main_neumorphic">#121212</color>
 
     <color name="primary_green">#81C784</color>
